<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:scaleType="centerCrop"
            android:layout_height="125dp"
            android:src="@drawable/sholat" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="3dp"
            card_view:cardUseCompatPadding="true">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:stretchColumns="1">

                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:drawableLeft="@drawable/tanggal"
                        android:padding="3dp"
                        android:text="@string/hari_ini"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:width="175dp"
                        android:id="@+id/tvTanggal"
                        android:padding="3dp"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:layout_marginBottom="8dp"
                        android:drawableLeft="@drawable/ic_location_city"
                        android:padding="3dp"
                        android:text="@string/lokasi"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvLokasi"
                        android:layout_column="2"
                        android:layout_marginBottom="8dp"
                        android:padding="3dp"
                        android:textColor="#000000"
                        android:textSize="20sp" />


                </TableRow>

                <View
                    android:layout_height="0.1dp"
                    android:background="#D3D3D3" />

                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:padding="3dp"
                        android:text="@string/subuh"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvFajar"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="right"
                        android:padding="3dip"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </TableRow>

                <View
                    android:layout_height="0.1dp"
                    android:background="#D3D3D3" />

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:padding="3dp"
                        android:text="@string/syuruq"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvShuruq"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="right"
                        android:padding="3dip"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </TableRow>

                <View
                    android:layout_height="0.1dp"
                    android:background="#D3D3D3" />

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:padding="3dp"
                        android:text="@string/dhuhur"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvDhuhur"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="right"
                        android:padding="3dip"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </TableRow>

                <View
                    android:layout_height="0.1dp"
                    android:background="#D3D3D3" />

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:padding="3dp"
                        android:text="@string/ashar"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvAshar"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="right"
                        android:padding="3dip"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </TableRow>

                <View
                    android:layout_height="0.1dp"
                    android:background="#D3D3D3" />

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:padding="3dp"
                        android:text="@string/maghrib"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvMaghrib"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="right"
                        android:padding="3dip"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </TableRow>

                <View
                    android:layout_height="0.1dp"
                    android:background="#D3D3D3" />

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:padding="3dp"
                        android:text="@string/isya"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvIsya"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="right"
                        android:padding="3dip"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </TableRow>

                <View
                    android:layout_height="0.1dp"
                    android:background="#D3D3D3" />

            </TableLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>